<resources>
    <string name="app_name">TaskManager</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="nombre">Ingrese nombre de evento</string>
    <string name="ubicacion">Ingrese ubicación</string>
    <string name="horadesde">Ingrese hora de inicio</string>
    <string name="horahasta">Ingrese hora de finalización</string>
    <string name="descripción">Ingrese descripción</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="indicación">Pulse en un día para ver su información...</string>



</resources>
